타이틀 이미지 변경

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 
     <div class="container">
         <div class="div">
-            <img class="logo" src="images/logo2.png" alt="">
+            <img class="logo" src="images/logo.png" alt="">
             <div class="button">
-                <button class="start" onclick="location.href='start.html'"><img src="images/Group 16.png" alt=""></button>
-                <button class="info"><img src="images/Group 7 (2).png" alt=""></button>
+                <button class="start" onclick="location.href='start.html'"><img src="images/StrartButton.png" alt=""></button>
+                <button class="info"><img src="images/LoadButton.png" alt=""></button>
             </div>
         </div>
-        <img src="images/KakaoTalk_20230908_101436985.png" alt="" width="483em">
+        <img src="images/Title_kimyeojoo.png" alt="" width="483em">
     </div>
 
     <script src="js/main.js"></script>
