img 추가, index.html 변경

--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
         <div class="div">
             <img class="logo" src="images/logo.png" alt="">
             <div class="button">
-                <button class="start" onclick="location.href='start.html'"><img src="images/StrartButton.png" alt=""></button>
-                <button class="info"><img src="images/LoadButton.png" alt=""></button>
+                <button class="start" onclick="location.href='start.html'"><img src="images/StrartButton.png" alt="trartButton.png"></button>
+                <button class="info"><img src="images/LoadButton.png" alt="LoadButton.png"></button>
             </div>
         </div>
-        <img src="images/Title_kimyeojoo.png" alt="" width="483em">
+        <img src="images/HeartIcon.png" alt="HeartIcon.png" width="50em">
+        <img src="images/Title_kimyeojoo.png" alt="Title_kimyeojoo.png" width="483em">
     </div>
 
     <script src="js/main.js"></script>
