여주 이미지 class 추가

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </div>
         </div>
         <img src="images/HeartIcon.png" alt="HeartIcon.png" width="50em">
-        <img src="images/Title_kimyeojoo.png" alt="Title_kimyeojoo.png" width="483em">
+        <img class="Title_kimyeojoo" src="images/Title_kimyeojoo.png" alt="Title_kimyeojoo.png">
     </div>
 
     <script src="js/main.js"></script>
