파일 추가, css 추가, js 추가

--- a/index.html
+++ b/index.html
@@ -5,21 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>너의 얼굴이 보고 싶어</title>
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/all.css">
 </head>
 <body>
-
+        
     <div class="container">
         <div class="div">
             <img class="logo" src="images/logo.png" alt="">
             <div class="button">
-                <button class="start" onclick="location.href='start.html'"><img src="images/StrartButton.png" alt="trartButton.png"></button>
+                <button class="start" onclick="location.href='intro.html'"><img src="images/StrartButton.png" alt="trartButton.png"></button>
                 <button class="info"><img src="images/LoadButton.png" alt="LoadButton.png"></button>
             </div>
         </div>
         <img src="images/HeartIcon.png" alt="HeartIcon.png" width="50em">
         <img class="Title_kimyeojoo" src="images/Title_kimyeojoo.png" alt="Title_kimyeojoo.png">
     </div>
-
+    
     <script src="js/main.js"></script>
+
 </body>
 </html>
