phone 배경화면 넣기

--- a/p.html
+++ b/p.html
@@ -10,6 +10,7 @@
         }
     </style>
     <link rel="stylesheet" href="css/all.css">
+    <link rel="stylesheet" href="css/p.css">
 
 </head>
 <body>
