--- a/question.html
+++ b/question.html
@@ -15,7 +15,15 @@
 </head>
 <body>
 
-    <div class="rect"></div>
+    <div class="paper">
+        <img src="images/letter paper.png" alt="" width="650px">
+        <div class="check" width="1px">
+            <input type="checkbox" class="select">
+            <input type="checkbox" class="select">
+            <input type="checkbox" class="select">
+            <input type="checkbox" class="select">
+        </div>
+    </div>
 
 </body>
 </html>
