--- a/question.html
+++ b/question.html
@@ -3,24 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
-        body{
-            background-color: hotpink;
-        }
-    </style>
+    <title>질문</title>
     <link rel="stylesheet" href="css/all.css">
     <link rel="stylesheet" href="css/question.css">
 
 </head>
 <body>
 
-    <div class="paper">
-        <img src="images/letter paper.png" alt="" width="650px">
+    <div class="question">
         <div class="check" width="1px">
             <input type="checkbox" class="select">
+            <br><br>
             <input type="checkbox" class="select">
+            <br><br>
             <input type="checkbox" class="select">
+            <br><br>
             <input type="checkbox" class="select">
         </div>
     </div>
