--- a/story1.html
+++ b/story1.html
@@ -2,14 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="css/story.css">
+    <title>너의 얼굴이 보고 싶어</title>
 </head>
 <body>
-
-    <img class="kimyeojoo" src="images/Title_kimyeojoo.png"..>
-    <div class=""></div>
     
 </body>
 </html>
