--- a/story1.html
+++ b/story1.html
@@ -5,8 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>너의 얼굴이 보고 싶어</title>
+    <link rel="stylesheet" href="css/all.css">
+    <link rel="stylesheet" href="css/story.css">
 </head>
 <body>
-    
+    <div class="nameWindow">
+        <div class="name"></div>
+    </div>
+    <div class="dialogueWindow">
+        <div class="dialogue"></div>
+    </div>
 </body>
 </html>
