--- a/story1.html
+++ b/story1.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,11 +10,14 @@
     <link rel="stylesheet" href="css/story.css">
 </head>
 <body>
-    <div class="nameWindow">
-        <div class="name"></div>
-    </div>
-    <div class="dialogueWindow">
-        <div class="dialogue"></div>
+    <div class="div"></div>
+    <div class="container">
+        <div class="nameWindow">
+            <div class="name"></div>
+        </div>
+        <div class="dialogueWindow">
+            <div class="dialogue"></div>
+        </div>
     </div>
 </body>
 </html>
