text 테스트로 넣기

--- a/story1.html
+++ b/story1.html
@@ -10,13 +10,12 @@
     <link rel="stylesheet" href="css/story.css">
 </head>
 <body>
-    <div class="div"></div>
     <div class="container">
         <div class="nameWindow">
-            <div class="name"></div>
+            <div class="name">김여주</div>
         </div>
         <div class="dialogueWindow">
-            <div class="dialogue"></div>
+            <div class="dialogue">안녕하세요 안녕하세요 안녕하세요 안녕하세요 안녕하세요 안녕하세요 안녕하세요 안녕하세요 안녕하세요 안녕하세요 안녕하세요 안녕하세요 안녕하세요 안녕하세요</div>
         </div>
     </div>
 </body>
