--- a/home.html
+++ b/home.html
@@ -30,7 +30,7 @@
     <button>메세지</button>
     <button>갤러리</button>
 
-    <footer class="underbar"></footer>
+    <!-- <footer class="underbar"></footer> -->
     
 
     <script>
