--- a/profile_Doyoon.html
+++ b/profile_Doyoon.html
@@ -9,6 +9,8 @@
 </head>
 <body>
 
+    <a href="phoneNumber.html"><button class="pnBtn">X</button></a>
+
     <div class="profile">
         Doyoon
     </div>
