--- a/profile_Choijaeyul.html
+++ b/profile_Choijaeyul.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>최재율</title>
 </head>
 <body>
     
