--- a/profile_Doyoon.html
+++ b/profile_Doyoon.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>도윤</title>
     <link rel="stylesheet" href="css/all.css">
     <link rel="stylesheet" href="css/profile_Doyoon.css">
 </head>
