메인화면 수정

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <button class="info"><img src="images/LoadButton.png" alt="LoadButton.png"></button>
             </div>
         </div>
-        <img class="HeartIcon"src="images/HeartIcon.png" alt="HeartIcon.png" width="50em">
+        <!-- <img class="HeartIcon"src="images/HeartIcon.png" alt="HeartIcon.png"> -->
         <img class="Title_kimyeojoo" src="images/Title_kimyeojoo.png" alt="Title_kimyeojoo.png">
     </div>
     
