--- a/home.html
+++ b/home.html
@@ -26,7 +26,7 @@
 <body>
 
     <a href="phoneNumber.html"><button><img src="images/address.png" alt="" width="100px"></button></a>
-    <button>전화</button>
+    <a href=""><button><img src="images/call.png" alt="" width="100px"></button></a>
     <button>메세지</button>
     <button>갤러리</button>
 
