튜토리얼 질문

--- a/question.html
+++ b/question.html
@@ -9,16 +9,22 @@
 
 </head>
 <body>
-
-    <div class="question">
-        <div class="check" width="1px">
-            <input type="checkbox" class="select">
-            <br><br>
-            <input type="checkbox" class="select">
-            <br><br>
-            <input type="checkbox" class="select">
-            <br><br>
-            <input type="checkbox" class="select">
+    
+    <div class="container">
+        <div class="nameWindow">
+            <div class="name">김여주</div>
+        </div>
+        <div class="dialogueWindow">
+            <div class="question">
+                <p>Q. 당신은 길을 걷고 있던 중 고양이 한 마리를 발견했습니다. 그 고양이의 생김새는?</p>
+                <div class="check" width="1px">
+                    <input type="checkbox" class="select"> 1. 털이 북실한 장모 고양이
+                    <br><br>
+                    <input type="checkbox" class="select"> 2. 호박 눈을 가진 샴고양이
+                    <br><br>
+                    <input type="checkbox" class="select"> 3. 어미에게 버려진 새끼 고양이 
+                </div>
+            </div>
         </div>
     </div>
 
