--- a/story1.html
+++ b/story1.html
@@ -15,7 +15,7 @@
             <div class="name">김여주</div>
         </div>
         <div class="dialogueWindow">
-            <div class="dialogue">안녕하세요 안녕하세요 안녕하세요 안녕하세요 안녕하세요 안녕하세요 안녕하세요 안녕하세요 안녕하세요 안녕하세요 안녕하세요 안녕하세요 안녕하세요 안녕하세요</div>
+            <div class="dialogue">이런 지각이야</div>
         </div>
     </div>
 </body>
