--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
         
     <div class="container">
-        <div class="div">
+        <div class="titleContainer">
             <img class="logo" src="images/logo.png" alt="">
             <div class="button">
                 <button class="start" onclick="location.href='intro.html'"><img src="images/StrartButton.png" alt="trartButton.png"></button>
