--- a/question.html
+++ b/question.html
@@ -16,17 +16,19 @@
         </div>
         <div class="dialogueWindow">
             <div class="question">
-                <p>Q. 당신은 길을 걷고 있던 중 고양이 한 마리를 발견했습니다. 그 고양이의 생김새는?</p>
+                <p id="q1"></p>
                 <div class="check" width="1px">
-                    <input type="radio" name="question" class="select"> 1. 털이 북실한 장모 고양이
+                    <input type="radio" name="question" class="select"><span id="a1"></span>
                     <br><br>
-                    <input type="radio" name="question" class="select"> 2. 호박 눈을 가진 샴고양이
+                    <input type="radio" name="question" class="select"><span id="a2"></span>
                     <br><br>
-                    <input type="radio" name="question" class="select"> 3. 어미에게 버려진 새끼 고양이 
+                    <input type="radio" name="question" class="select"><span id="a3"></span>
                 </div>
             </div>
         </div>
     </div>
+
+    <script src="js/question.js"></script>
 
 </body>
 </html>
