민들레 캐릭터 이미지 추가

--- a/question.html
+++ b/question.html
@@ -11,6 +11,7 @@
 <body>
     
     <div class="container">
+        <div class="character"><img src="images/민들레.png" alt=""></div>
         <div class="nameWindow">
             <div class="name">민들레</div>
         </div>
