이미지 추가 및 홈화면 앱 아이콘 변경

--- a/loading.html
+++ b/loading.html
@@ -9,8 +9,12 @@
     <script src="js/loading.js"></script>
 </head>
 <body>
+    <img src="images/김여주 전신.png" alt="">
     <div class="loading">
         <img src="images/loading.gif" alt="">
     </div>
+    <script type="text/javascript">
+        $(document).ready(() => $('.loading').hide());
+    </script>
 </body>
 </html>
