--- a/phoneNumber.html
+++ b/phoneNumber.html
@@ -12,7 +12,7 @@
     <a href="home.html"><button class="homeBtn">X</button></a>
 
     <a href="profile_Doyoon.html"><button>도윤</button></a>
-    <a href="profile_Barkleehyun.html"><button>백이현</button></a>
+    <a href="profile_Baekleehyun.html"><button>백이현</button></a>
     <a href="profile_Choijaeyul.html"><button>최재율</button></a>
 
 </body>
