--- a/profile_Baekleehyun.html
+++ b/profile_Baekleehyun.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>도윤</title>
+    <title>백이현</title>
     <link rel="stylesheet" href="css/all.css">
     <link rel="stylesheet" href="css/profile.css">
     <style>
         body{
-            background-image: url("images/profile_DoYoon.png");
+            background-image: url("images/profile_BaekLeeHyun.png");
         }
     </style>
 </head>
@@ -17,7 +17,7 @@
     <a href="phoneNumber.html"><button class="pnBtn">X</button></a>
 
     <div class="profile">
-        Doyoon
+        Baekleehyun
     </div>
     
 </body>
