--- a/home.html
+++ b/home.html
@@ -18,6 +18,17 @@
             top: 0;
             bottom: 0;
         }
+
+        button{
+            padding: 0;
+        }
+
+        .app{
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
     </style>
     <link rel="stylesheet" href="css/all.css">
     <link rel="stylesheet" href="css/p.css">
@@ -25,10 +36,13 @@
 </head>
 <body>
 
-    <a href="phoneNumber.html"><button><img src="images/address.png" alt="" width="100px"></button></a>
-    <a href=""><button><img src="images/call.png" alt="" width="100px"></button></a>
-    <a href=""><button><img src="images/mesage.png" alt="" width="100px"></button></a>
-    <button>갤러리</button>
+    <div class="app">
+        <a href="phoneNumber.html"><button><img src="images/address.png" alt="" width="90px"></button></a>
+        <a href=""><button><img src="images/call.png" alt="" width="90px"></button></a>
+        <a href=""><button><img src="images/mesage.png" alt="" width="90px" ></button></a>
+        <a href=""><button><img src="images/gallery.png" alt="" width="90px" ></button></a>
+    </div>
+
 
     <!-- <footer class="underbar"></footer> -->
     
