all.css 폰트 범위 수정

--- a/phoneNumber.html
+++ b/phoneNumber.html
@@ -6,6 +6,9 @@
     <title>핸드폰</title>
     <link rel="stylesheet" href="css/all.css">
     <link rel="stylesheet" href="css/phoneNumber.css">
+    <style>
+        
+    </style>
 </head>
 <body>
 
