--- a/phoneNumber.html
+++ b/phoneNumber.html
@@ -6,17 +6,17 @@
     <title>핸드폰</title>
     <link rel="stylesheet" href="css/all.css">
     <link rel="stylesheet" href="css/phoneNumber.css">
-    <style>
-        
-    </style>
 </head>
 <body>
 
     <a href="home.html"><button class="homeBtn">X</button></a>
-
-    <a href="profile_Doyoon.html"><button>도윤</button></a>
-    <a href="profile_Baekleehyun.html"><button>백이현</button></a>
-    <a href="profile_Choijaeyul.html"><button>최재율</button></a>
+    <br>
+    <br>
+    <div class="container">
+        <br><a href="profile_Doyoon.html" class="name"><button>도윤</button></a><br><br>
+        <a href="profile_Baekleehyun.html" class="name"><button>백이현</button></a><br><br>
+        <a href="profile_Choijaeyul.html" class="name"><button>최재율</button></a><br><br>
+    </div>
 
 </body>
 </html>
