최재율 프로필 사진 추가

--- a/profile_Choijaeyul.html
+++ b/profile_Choijaeyul.html
@@ -4,8 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>최재율</title>
+    <link rel="stylesheet" href="css/all.css">
+    <link rel="stylesheet" href="css/profile.css">
+    <style>
+        body{
+            background-image: url("images/profile_Choijaeyul.png");
+        }
+    </style>
 </head>
 <body>
+
+    <a href="phoneNumber.html"><button class="pnBtn">X</button></a>
+
+    <div class="profile">
+        Choijaeyul
+    </div>
     
 </body>
 </html>
