--- a/question.html
+++ b/question.html
@@ -11,7 +11,7 @@
 <body>
     
     <div class="container">
-        <div class="character"><img src="images/민들레.png" alt=""></div>
+        <div class="character"><img src="images/민들레.png" alt="" class="민들레"></div>
         <div class="nameWindow">
             <div class="name">민들레</div>
         </div>
