--- a/opening.html
+++ b/opening.html
@@ -10,8 +10,8 @@
 <body>
     <div class="container">
         <div class="dialogueWindow">
-            <div class="dialogue">안녕하세요!</div>
-            <button id="nextButton"><img src="images/nextButton.png" alt=""></button>
+            <div class="dialogue">안녕하세요!</div> <br>
+            <div class="button"><button id="nextButton"><img src="images/nextButton.png" alt=""></button></div>
         </div>
     </div>
 </body>
