--- a/opening.html
+++ b/opening.html
@@ -14,5 +14,6 @@
             <div class="button"><button id="nextButton"><img src="images/nextButton.png" alt=""></button></div>
         </div>
     </div>
+    <script src="js/dialogue.js"></script>
 </body>
 </html>
