--- a/story1.html
+++ b/story1.html
@@ -12,11 +12,13 @@
 <body>
     <div class="container">
         <div class="nameWindow">
-            <div class="name">김여주</div>
+            <div class="name"></div>
         </div>
         <div class="dialogueWindow">
-            <div class="dialogue">이런 지각이야</div>
+            <div class="dialogue"></div>
+            <div class="button"><button id="nextButton"><img src="images/nextButton.png" alt=""></button></div>
         </div>
     </div>
+    <script src="js/dialogue.js"></script>
 </body>
 </html>
