이미지 추가

--- a/story1.html
+++ b/story1.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <div class="container">
+        <div class="character"><img src="images/민들레.png" alt="" class="imgCharacter"></div>
         <div class="nameWindow">
             <div class="name"></div>
         </div>
