--- a/story1.html
+++ b/story1.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="character"><img src="images/민들레.png" alt="" class="imgCharacter"></div>
+        <div class="character"><img src="images/김여주 전신.png" alt="" class="imgCharacter"></div>
         <div class="nameWindow">
             <div class="name"></div>
         </div>
