도윤 프로필 추가

--- a/profile_Doyoon.html
+++ b/profile_Doyoon.html
@@ -18,6 +18,16 @@
 
     <div class="profile">
         Doyoon
+        <div class="detailProfile">
+            <br>
+            나이 : 17 <br>
+            생일 : 10.17 <br>
+            신장 : 183cm <br>
+            체중 : 71kg <br>
+        </div>
+        <div class="explain">
+            
+        </div>
     </div>
     
 </body>
