크기 변경 제한

--- a/home.html
+++ b/home.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>홈</title>
     <style>
+
         body{
-            background-color: hotpink;
             margin: 0;
             padding: 0;
+           
         }
         .underbar{
             background-color: aqua;
@@ -48,8 +49,9 @@
     
 
     <script>
-
-
+        window.onresize = function() {
+            window.resizeTo(400, 600); 
+        };
     </script>
 
 </body>
