--- a/phone.html
+++ b/phone.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/phone.css">
     <link rel="stylesheet" href="css/all.css">
-    
+    <style>
+        body{
+            background-color: transparent;
+            border: 0;
+        }
+    </style>
 </head>
 <body>
     <button onclick="phone()"><img src="images/phone.png" alt="" width="400px"></button>
