폰 모든 페이지 크기 변경 제한

--- a/home.html
+++ b/home.html
@@ -47,12 +47,6 @@
 
     <!-- <footer class="underbar"></footer> -->
     
-
-    <script>
-        window.onresize = function() {
-            window.resizeTo(400, 600); 
-        };
-    </script>
-
+    <script src="js/phone.js"></script>
 </body>
 </html>
