--- a/phoneNumber.html
+++ b/phoneNumber.html
@@ -17,6 +17,6 @@
         <a href="profile_Baekleehyun.html" class="name"><button>백이현</button></a><br><br>
         <a href="profile_Choijaeyul.html" class="name"><button>최재율</button></a><br><br>
     </div>
-
+    <script src="js/phone.js"></script>
 </body>
 </html>
