--- a/profile_Doyoon.html
+++ b/profile_Doyoon.html
@@ -26,7 +26,13 @@
             체중 : 71kg <br>
         </div>
         <div class="explain">
-            
+            <div class="explainTxt">
+                학업과 모델 일을 병행하며 학교에 다님<br><br>
+                호박색의 눈이 인상적인 고양이상 얼굴<br><br>
+                피어싱을 한 게 특징, 그런 자신도 피어싱이 잘 어울린다고 생각함<br><br>
+                기타치는 것이 취미, 버스킹을 해본 적이 있음<br><br>
+                베이킹하는 것을 좋아하지만 그닥 잘하지 않음<br><br>
+            </div>
         </div>
     </div>
     <script src="js/phone.js"></script>
