백이현 프로필 추가

--- a/profile_Baekleehyun.html
+++ b/profile_Baekleehyun.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>백이현</title>
+    <title>도윤</title>
     <link rel="stylesheet" href="css/all.css">
     <link rel="stylesheet" href="css/profile.css">
     <style>
@@ -17,7 +17,23 @@
     <a href="phoneNumber.html"><button class="pnBtn">X</button></a>
 
     <div class="profile">
-        Baekleehyun
+        BaekLeeHyun
+        <div class="detailProfile">
+            <br>
+            나이 : 18 <br>
+            생일 : 3.21 <br>
+            신장 : 177cm <br>
+            체중 : 70kg <br>
+        </div>
+        <div class="explain">
+            <div class="explainTxt">
+                학생회장, 모두에게 친절함<br><br>
+                온화한 성격을 가졌으며 학생회장 역할이 마음에 들고 즐김<br><br>
+                연한 금발로 인해 빛이 비춰 질 때 머리가 살짝 빛나기도 함<br><br>
+                학생회는 종종 다도를 즐기지만 그 시간을 그닥 좋아하지 않아 보임<br><br>
+                강아지 와 같이 살고 있음<br><br>
+            </div>
+        </div>
     </div>
     <script src="js/phone.js"></script>
 </body>
