--- a/profile_Choijaeyul.html
+++ b/profile_Choijaeyul.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>최재율</title>
+    <title>도윤</title>
     <link rel="stylesheet" href="css/all.css">
     <link rel="stylesheet" href="css/profile.css">
     <style>
@@ -17,7 +17,23 @@
     <a href="phoneNumber.html"><button class="pnBtn">X</button></a>
 
     <div class="profile">
-        Choijaeyul
+        Doyoon
+        <div class="detailProfile">
+            <br>
+            나이 : 17 <br>
+            생일 : 1.2 <br>
+            신장 : 179cm <br>
+            체중 : 68kg <br>
+        </div>
+        <div class="explain">
+            <div class="explainTxt">
+                학업과 모델 일을 병행하며 학교에 다님<br><br>
+                호박색의 눈이 인상적인 고양이상 얼굴<br><br>
+                피어싱을 한 게 특징, 그런 자신도 피어싱이 잘 어울린다고 생각함<br><br>
+                기타치는 것이 취미, 버스킹을 해본 적이 있음<br><br>
+                베이킹하는 것을 좋아하지만 그닥 잘하지 않음<br><br>
+            </div>
+        </div>
     </div>
     <script src="js/phone.js"></script>
 </body>
