프로필 변경

--- a/profile_Choijaeyul.html
+++ b/profile_Choijaeyul.html
@@ -17,7 +17,7 @@
     <a href="phoneNumber.html"><button class="pnBtn">X</button></a>
 
     <div class="profile">
-        Doyoon
+        Choijaeyul
         <div class="detailProfile">
             <br>
             나이 : 17 <br>
@@ -27,11 +27,11 @@
         </div>
         <div class="explain">
             <div class="explainTxt">
-                학업과 모델 일을 병행하며 학교에 다님<br><br>
-                호박색의 눈이 인상적인 고양이상 얼굴<br><br>
-                피어싱을 한 게 특징, 그런 자신도 피어싱이 잘 어울린다고 생각함<br><br>
-                기타치는 것이 취미, 버스킹을 해본 적이 있음<br><br>
-                베이킹하는 것을 좋아하지만 그닥 잘하지 않음<br><br>
+                학업 성취도가 상당히 높아 사람들이 놀라곤 함<br><br>
+                어릴 적부터 게임 하는 것을 좋아해 게임팩을 모으는 것이 취미<br><br>
+                왼쪽 눈 아래에 눈물점이 있는 게 포인트<br><br>
+                은발과 자안을 가져 신비로운 느낌을 주지만 성격은 그렇지 않음<br><br>
+                생각보다 털털하고 뒤 끝 없는 성격<br><br>
             </div>
         </div>
     </div>
