--- a/profile_Baekleehyun.html
+++ b/profile_Baekleehyun.html
@@ -31,7 +31,7 @@
                 온화한 성격을 가졌으며 학생회장 역할이 마음에 들고 즐김<br><br>
                 연한 금발로 인해 빛이 비춰 질 때 머리가 살짝 빛나기도 함<br><br>
                 학생회는 종종 다도를 즐기지만 그 시간을 그닥 좋아하지 않아 보임<br><br>
-                강아지 와 같이 살고 있음<br><br>
+                강아지 반이와 같이 살고 있음<br><br>
             </div>
         </div>
     </div>
