gallery.html 생성

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="titleContainer">
             <img class="logo" src="images/logo.png" alt="">
             <div class="button">
-                <button class="start" onclick="location.href='intro.html'"><img src="images/StrartButton.png" alt="trartButton.png"></button>
+                <button class="start" onclick="location.href='question.html'"><img src="images/StrartButton.png" alt="trartButton.png"></button>
                 <button class="info"><img src="images/LoadButton.png" alt="LoadButton.png"></button>
             </div>
         </div>
