phone 아이콘 변경

--- a/gallery.html
+++ b/gallery.html
@@ -4,12 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>갤러리</title>
+    <style>
+
+        body{
+            margin: 0;
+            padding: 0;
+           
+        }
+        
+
+    </style>
+    <link rel="stylesheet" href="css/all.css">
+    <link rel="stylesheet" href="css/p.css">
+
 </head>
 <body>
-    <div class="container">
-        <div class="img1"><img src=""></div>
-        <div class="img2"></div>
-        <div class="img3"></div>
-    </div>
+
+    <script src="js/phone.js"></script>
 </body>
 </html>
