--- a/home.html
+++ b/home.html
@@ -26,8 +26,9 @@
 
         .app{
             display: flex;
-            justify-content: center;
             align-items: center;
+            justify-content: space-between;
+            margin: 1em 2em 0em 2em;
         }
 
     </style>
@@ -38,10 +39,10 @@
 <body>
 
     <div class="app">
-        <a href="phoneNumber.html"><button><img src="images/address.png" alt="" width="90px"></button></a>
-        <a href=""><button><img src="images/call.png" alt="" width="90px"></button></a>
-        <a href=""><button><img src="images/mesage.png" alt="" width="90px" ></button></a>
-        <a href=""><button><img src="images/gallery.png" alt="" width="90px" ></button></a>
+        <a href="phoneNumber.html"><button><img src="images/address.png" alt="" width="70px"></button></a>
+        <a href="gallery.html"><button><img src="images/call.png" alt="" width="70px"></button></a>
+        <a href=""><button><img src="images/message.png" alt="" width="70px" ></button></a>
+        <a href=""><button><img src="images/gallery.png" alt="" width="70px" ></button></a>
     </div>
 
 
