--- a/story1.html
+++ b/story1.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="character"><img src="images/김여주 전신.png" alt="" class="imgCharacter"></div>
+        <div class="character"><img src="" alt="" class="imgCharacter"></div>
         <div class="nameWindow">
             <div class="name"></div>
         </div>
@@ -20,6 +20,12 @@
             <div class="button"><button id="nextButton"><img src="images/nextButton.png" alt=" "></button></div>
         </div>
     </div>
+
+    
+
+
+
+
     <script src="js/dialogue.js"></script>
 </body>
 </html>
