home.html 오류 수령

--- a/home.html
+++ b/home.html
@@ -40,9 +40,9 @@
 
     <div class="app">
         <a href="phoneNumber.html"><button><img src="images/address.png" alt="" width="70px"></button></a>
-        <a href="gallery.html"><button><img src="images/call.png" alt="" width="70px"></button></a>
+        <a href=""><button><img src="images/call.png" alt="" width="70px"></button></a>
         <a href=""><button><img src="images/message.png" alt="" width="70px" ></button></a>
-        <a href=""><button><img src="images/gallery.png" alt="" width="70px" ></button></a>
+        <a href="gallery.html"><button><img src="images/gallery.png" alt="" width="70px" ></button></a>
     </div>
 
 
