--- a/question.html
+++ b/question.html
@@ -13,18 +13,11 @@
     <div class="container">
         <div class="character"><img src="images/민들레.png" alt="" class="imgMindeulre"></div>
         <div class="nameWindow">
-            <div class="name">민들레</div>
+            <div class="name">?</div>
         </div>
         <div class="dialogueWindow">
             <div class="question">
                 <p id="q1"></p>
-                <!-- <div class="check" width="1px">
-                    <input type="radio" name="question" class="select"><span id="a1"></span>
-                    <br><br>
-                    <input type="radio" name="question" class="select"><span id="a2"></span>
-                    <br><br>
-                    <input type="radio" name="question" class="select"><span id="a3"></span>
-                </div> -->
                 <label>
                     <input type="radio" name="answer" value="a1" id="radioA1">
                     <span id="a1"></span>
@@ -45,7 +38,7 @@
         </div>
     </div>
 
+    <p>누적된 값: <span id="accumulatedValue">선택한 값이 없습니다.</span></p>   
     <script src="js/question.js"></script>
-
 </body>
 </html>
