--- a/question.html
+++ b/question.html
@@ -11,7 +11,7 @@
 <body>
     
     <div class="container">
-        <div class="character"><img src="images/민들레.png" alt="" class="imgMindeulre"></div>
+        <div class="character"><img src="images/hiddenPerson.png" alt="" class="imgMindeulre"></div>
         <div class="nameWindow">
             <div class="name">?</div>
         </div>
@@ -37,8 +37,7 @@
             </div>
         </div>
     </div>
-
-    <p>누적된 값: <span id="accumulatedValue">선택한 값이 없습니다.</span></p>   
+ 
     <script src="js/question.js"></script>
 </body>
 </html>
