--- a/DoyoonRoute.html
+++ b/DoyoonRoute.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>너의 얼굴이 보고 싶어</title>
+    <link rel="stylesheet" href="css/all.css">
+    <link rel="stylesheet" href="css/story.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="character"><img src="" alt="" class="imgCharacter"></div>
+        <div class="nameWindow">
+            <div class="name"></div>
+        </div>
+        <div class="dialogueWindow">
+            <div class="dialogue"></div>
+            <div class="button"><button id="nextButton"><img src="images/nextButton.png" alt=" "></button></div>
+        </div>
+    </div>
+
+    <script src="js/dialogue.js"></script>
 </body>
 </html>
