--- a/gallery.html
+++ b/gallery.html
@@ -5,13 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>갤러리</title>
     <link rel="stylesheet" href="css/all.css">
-    <link rel="stylesheet" href="css/phoneNumber.css">
+    <link rel="stylesheet" href="css/gallery.css">
 </head>
 <body>
 
     <a href="home.html"><button class="homeBtn">X</button></a>
     <div class="container">
-        
+    
+        <button class="prevButton">&lt;</button>
+        <button class="nextButton">&gt;</button>
     </div>
     <script src="js/phone.js"></script>
 </body>
