--- a/home.html
+++ b/home.html
@@ -42,7 +42,7 @@
         <a href="phoneNumber.html"><button><img src="images/address.png" alt="" width="70px"></button></a>
         <a href=""><button><img src="images/call.png" alt="" width="70px"></button></a>
         <a href=""><button><img src="images/message.png" alt="" width="70px" ></button></a>
-        <a href=""><button><img src="images/gallery.png" alt="" width="70px" ></button></a>
+        <a href="gallery.html"><button><img src="images/gallery.png" alt="" width="70px" ></button></a>
     </div>
 
 
