js파일 이름 변경

--- a/story1.html
+++ b/story1.html
@@ -20,12 +20,7 @@
             <div class="button"><button id="nextButton"><img src="images/nextButton.png" alt=" "></button></div>
         </div>
     </div>
-
     
-
-
-
-
-    <script src="js/dialogue.js"></script>
+    <script src="js/dialogue1.js"></script>
 </body>
 </html>
