스토리1 수정

--- a/question.html
+++ b/question.html
@@ -38,6 +38,7 @@
         </div>
     </div>
  
-    <script src="js/question.js"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script src="js/question.js" type="module"></script>
 </body>
 </html>
