--- a/story1.html
+++ b/story1.html
@@ -21,6 +21,6 @@
         </div>
     </div>
     
-    <script src="js/dialogue1.js"></script>
+    <script src="js/dialogue1.js" type="module"></script>
 </body>
 </html>
