--- a/profile_Baekleehyun.html
+++ b/profile_Baekleehyun.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>도윤</title>
+    <title>연락처 | 백이현</title>
     <link rel="stylesheet" href="css/all.css">
     <link rel="stylesheet" href="css/profile.css">
     <style>
