배경이미지 변경 추가

--- a/ChoijaeyulRute.html
+++ b/ChoijaeyulRute.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="css/story.css">
 </head>
 <body>
-    
     <button onclick="phone()" style="float: right;"><img src="images/phone.png" alt="" class="phone"></button>
     <div class="container">
         <div class="character"><img src="" alt="" class="imgCharacter"></div>
@@ -31,6 +30,6 @@
         }
     </script>
 
-    <script src="js/DoYoonRoute_dialogue.js"></script>
+    <script src="js/ChoijaeyulRute_dialogue.js"></script>
 </body>
 </html>
