선택지 임시 추가

--- a/BaekLeeHyunRoute.html
+++ b/BaekLeeHyunRoute.html
@@ -12,6 +12,10 @@
 <body>
     <button onclick="phone()" style="float: right;"><img src="images/phone.png" alt="" class="phone"></button>
     <div class="container">
+        <div class="selectContainer">
+            <button class="select1">키스한다</button>
+            <button class="select2">키갈한다</button>
+        </div>
         <div class="character"><img src="" alt="" class="imgCharacter"></div>
         <div class="nameWindow">
             <div class="name"></div>
