--- a/gallery.html
+++ b/gallery.html
@@ -8,13 +8,18 @@
     <link rel="stylesheet" href="css/gallery.css">
 </head>
 <body>
-
     <a href="home.html"><button class="homeBtn">X</button></a>
+    <br><br>
     <div class="container">
-    
+        <div class="image-container">
+            <img src="image1.jpg" alt="">
+        </div>
+        <br><br>
+        <div class="image-description">이미지 1 설명</div>
+        <br>
         <button class="prevButton">&lt;</button>
         <button class="nextButton">&gt;</button>
     </div>
-    <script src="js/phone.js"></script>
+    <script src="js/gallery.js"></script>
 </body>
 </html>
