--- a/BaekLeeHyunRoute.html
+++ b/BaekLeeHyunRoute.html
@@ -13,8 +13,8 @@
     <button onclick="phone()" style="float: right;"><img src="images/phone.png" alt="" class="phone"></button>
     <div class="container">
         <div class="selectContainer">
-            <button class="select1">키스한다</button>
-            <button class="select2">키갈한다</button>
+            <!-- <button class="select1">키스한다</button>
+            <button class="select2">키갈한다</button> -->
         </div>
         <div class="character"><img src="" alt="" class="imgCharacter"></div>
         <div class="nameWindow">
