백이현 루트 수정

--- a/BaekLeeHyunRoute.html
+++ b/BaekLeeHyunRoute.html
@@ -12,16 +12,16 @@
 <body>
     <button onclick="phone()" style="float: right;"><img src="images/phone.png" alt="" class="phone"></button>
     <div class="container">
-        <div class="selectContainer">
-            <!-- <button class="select1">키스한다</button>
-            <button class="select2">키갈한다</button> -->
-        </div>
         <div class="character"><img src="" alt="" class="imgCharacter"></div>
         <div class="nameWindow">
             <div class="name"></div>
         </div>
         <div class="dialogueWindow">
             <div class="dialogue"></div>
+            <div class="selectContainer" style="display: none;">
+                <button class="select1">정말요? 감사합니다</button>
+                <button class="select2">저도 알고 있어요</button>
+            </div>
             <div class="button"><button id="nextButton"><img src="images/nextButton.png" alt=" "></button></div>
         </div>
     </div>
