message 민들레 추가

--- a/message.html
+++ b/message.html
@@ -13,7 +13,7 @@
     <br>
     <br>
     <div class="container">
-        <br><a href="profile_Doyoon.html" class="name"><button>민들레</button></a><br><br>
+        <br><a href="messagePage1.html" class="name"><button>민들레</button></a><br><br>
         <a href="profile_Baekleehyun.html" class="name"><button>지연</button></a><br><br>
         <a href="profile_Choijaeyul.html" class="name"><button>엄마</button></a><br><br>
     </div>
