--- a/BaekLeeHyunRoute.html
+++ b/BaekLeeHyunRoute.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/story.css">
 </head>
 <body>
-    <button onclick="phone()" style="float: right;"><img src="images/phone.png" alt="" class="phone"></button>
+    <button onclick="phone()" style="float: right;" class="phone"><img src="images/phone.png" alt="" ></button>
     <div class="container">
         <div class="character"><img src="" alt="" class="imgCharacter"></div>
         <div class="nameWindow">
@@ -25,14 +25,6 @@
             <div class="button"><button id="nextButton"><img src="images/nextButton.png" alt=" "></button></div>
         </div>
     </div>
-
-    <script>
-        function phone(){
-            var popupX = (window.screen.width / 2) - (400 / 2);
-            var popupY= (window.screen.height /2) - (600 / 2);
-            window.open('home.html', 'phone', 'status=no, height=600, width=400, left='+ popupX + ', top='+ popupY + ', screenX='+ popupX + ', screenY= '+ popupY);
-        }
-    </script>
 
     <script src="js/BaekLeeHyunRoute_dialogue.js"></script>
 </body>
