--- a/BaekLeeHyunRoute.html
+++ b/BaekLeeHyunRoute.html
@@ -18,7 +18,7 @@
         </div>
         <div class="dialogueWindow">
             <div class="dialogue"></div>
-            <div class="selectContainer" style="display: none;">
+            <div class="selectContainer">
                 <button class="select1">정말요? 감사합니다</button>
                 <button class="select2">저도 알고 있어요</button>
             </div>
