--- a/루트/BaekLeeHyunRoute3.html
+++ b/루트/BaekLeeHyunRoute3.html
@@ -34,6 +34,6 @@
         }
     </script>
 
-    <script src="js/BaekLeeHyunRoute_dialogue3.js"></script>
+    <script type="module" src="js/BaekLeeHyunRoute_dialogue3.js"></script>
 </body>
 </html>
