--- a/ChoijaeyulRute.html
+++ b/ChoijaeyulRute.html
@@ -18,6 +18,10 @@
         </div>
         <div class="dialogueWindow">
             <div class="dialogue"></div>
+            <div class="selectContainer">
+                <button class="select2">미남이 많아서! 난 잘생긴 사람 진짜 좋아하거든~ </button>
+                <button class="select1">그냥 여러가지..</button>
+            </div>
             <div class="button"><button id="nextButton"><img src="images/nextButton.png" alt=" "></button></div>
         </div>
     </div>
