--- a/BaekLeeHyunRoute2.html
+++ b/BaekLeeHyunRoute2.html
@@ -18,10 +18,6 @@
         </div>
         <div class="dialogueWindow">
             <div class="dialogue"></div>
-            <div class="selectContainer" style="display: none;">
-                <button class="select1">정말요? 감사합니다</button>
-                <button class="select2">저도 알고 있어요</button>
-            </div>
             <div class="button"><button id="nextButton"><img src="images/nextButton.png" alt=" "></button></div>
         </div>
     </div>
@@ -34,6 +30,6 @@
         }
     </script>
 
-    <script type="module" src="js/BaekLeeHyunRoute_dialogue3.js"></script>
+    <script src="js/BaekLeeHyunRoute_dialogue2.js"></script>
 </body>
 </html>
