--- a/BaekLeeHyunRoute4.html
+++ b/BaekLeeHyunRoute4.html
@@ -19,8 +19,8 @@
         <div class="dialogueWindow">
             <div class="dialogue"></div>
             <div class="selectContainer" style="display: none;">
-                <button class="select1">정말요? 감사합니다</button>
-                <button class="select2">저도 알고 있어요</button>
+                <button class="select1">저는 괜찮았어요.. 그리고 좋았어요..</button>
+                <button class="select2">하하, 저는 그런 거에 관여하지 않습니다. 이만 가보겠습니다 선배님</button>
             </div>
             <div class="button"><button id="nextButton"><img src="images/nextButton.png" alt=" "></button></div>
         </div>
@@ -34,6 +34,6 @@
         }
     </script>
 
-    <script src="js/BaekLeeHyunRoute_dialogue2.js"></script>
+    <script type="module" src="js/BaekLeeHyunRoute_dialogue4.js"></script>
 </body>
 </html>
