최재율 루트 수정

--- a/ChoijaeyulRute3.html
+++ b/ChoijaeyulRute3.html
@@ -18,14 +18,14 @@
         </div>
         <div class="dialogueWindow">
             <div class="dialogue"></div>
-            <div class="selectContainer">
-                <button class="select2">미남이 많아서! 난 잘생긴 사람 진짜 좋아하거든~ </button>
-                <button class="select1">그냥 여러가지..</button>
+            <div class="selectContainer" style="display: none;">
+                <button class="select1">남의 집인데 가만히 있자</button>
+                <button class="select2">궁금한데 책장에 있는 책이나 좀 볼까?</button>
             </div>
             <div class="button"><button id="nextButton"><img src="images/nextButton.png" alt=" "></button></div>
         </div>
     </div>
 
-    <script src="js/ChoijaeyulRute_dialogue.js"></script>
+    <script src="js/ChoijaeyulRute_dialogue3.js"></script>
 </body>
 </html>
