--- a/WaitingEnding.html
+++ b/WaitingEnding.html
@@ -12,10 +12,9 @@
             /* background-image: url("images/배드 엔딩.png"); */
             background-color: rgb(137, 146, 146);
         }
-
         .image{
             width: 27vw;
-            margin-left: 25vw;
+            margin-left: 15vw;
             position: relative;
         }
 
@@ -23,6 +22,24 @@
             width: 25vw;
             margin-left: 7em;
             position: absolute;
+        }
+
+        button{
+            float: right;
+            margin-right: 3em;
+            margin-top: -10vw;
+            position: relative;
+        }
+
+        img{
+            width: 10em;
+        }
+
+        .txt{
+            font-size: 3rem;
+            float: left;
+            margin-left: 1em;
+            margin-top: 1vw;
         }
 
         @media screen and (max-width: 720px) {
