--- a/DoYoonGoodEnding.html
+++ b/DoYoonGoodEnding.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>THE WORST ENDING</title>
+    <title>DOYOON GOOD ENDING</title>
     <link rel="stylesheet" href="css/all.css">
     <link rel="stylesheet" href="css/ending.css">
     <style>
@@ -13,9 +13,9 @@
         }
 
         .image{
-            width: 50vw;
+            width: 85vw;
             margin-left: 0vw;
-            margin-bottom: 0;
+            margin-top: 0vw;
             position: relative;
         }
 
@@ -23,6 +23,8 @@
             width: 25vw;
             margin-left: 0em;
             position: absolute;
+            position: absolute;
+            transform: translate(-16vw, -3vw); 
         }
 
         button{
@@ -41,17 +43,19 @@
             float: left;
             margin-left: 1em;
             margin-top: 1vw;
+            position: relative;
+            color: #fff;
         }
 
         @media screen and (max-width: 720px) {
             .image{
-                width: 40vw;
-                margin-top: 20vw;
+                width: 80vw;
+                margin-top: 40vw;
             }
 
             .logo{
                 width: 45vw;
-                margin-left: -3em;
+                transform: translate(-20vw, 30vw); 
             }
 
             button{
@@ -61,13 +65,13 @@
 
         @media screen and (max-width: 540px){
             .image{
-                width: 60vw;
-                margin-top: 30vw;
+                width: 90vw;
+                margin-top: 40vw;
             }
 
             .logo{
-                width: 50vw;
-                margin-left: -10em;
+                width: 45vw;
+                transform: translate(-30vw, 30vw); 
             }
 
             button{
@@ -86,7 +90,7 @@
     </style>
 </head>
 <body>
-    <div class="txt">THE WORST ENDING</div>
+    <div class="txt">DOYOON GOOD ENDING</div>
     <img src="images/도윤 굿엔딩.png" alt="" class="image">
     <img src="images/logo.png" alt="" class="logo">
     <div class="button"><button id="nextButton" onclick="location.href='index.html'"><img src="images/nextButton.png" alt=" "></button></div>
