최재율 루트 완성

--- a/ChoijaeyulRute4.html
+++ b/ChoijaeyulRute4.html
@@ -19,13 +19,13 @@
         <div class="dialogueWindow">
             <div class="dialogue"></div>
             <div class="selectContainer" style="display: none;">
-                <button class="select1">남의 집인데 가만히 있자</button>
-                <button class="select2">궁금한데 책장에 있는 책이나 좀 볼까?</button>
+                <button class="select1">너의 어린 시절에 질투하다니 그거 참 멍청할 수가</button>
+                <button class="select2">..응? 그게 뭐야..{•⸝⸝⸝⸝•}</button>
             </div>
             <div class="button"><button id="nextButton"><img src="images/nextButton.png" alt=" "></button></div>
         </div>
     </div>
 
-    <script src="js/ChoijaeyulRute_dialogue3.js"></script>
+    <script src="js/ChoijaeyulRute_dialogue4.js"></script>
 </body>
 </html> 
