도윤 루트 완성

--- a/DoyoonRoute.html
+++ b/DoyoonRoute.html
@@ -19,6 +19,10 @@
         </div>
         <div class="dialogueWindow">
             <div class="dialogue"></div>
+            <div class="selectContainer" style="display: none;">
+                <button class="select1">당연히 알지</button>
+                <button class="select2">누구더라?</button>
+            </div>
             <div class="button"><button id="nextButton"><img src="images/nextButton.png" alt=" "></button></div>
         </div>
     </div>
