--- a/DoyoonRoute3.html
+++ b/DoyoonRoute3.html
@@ -19,6 +19,10 @@
         </div>
         <div class="dialogueWindow">
             <div class="dialogue"></div>
+            <div class="selectContainer" style="display: none;">
+                <button class="select1">최악이야</button>
+                <button class="select2">맛있어, 맛있다!</button>
+            </div>
             <div class="button"><button id="nextButton"><img src="images/nextButton.png" alt=" "></button></div>
         </div>
     </div>
