--- a/DoyoonRoute4.html
+++ b/DoyoonRoute4.html
@@ -21,7 +21,7 @@
             <div class="dialogue"></div>
             <div class="selectContainer" style="display: none;">
                 <button class="select1">좋은 친구지, 평생 베스트 프렌드하자!</button>
-                <button class="select2">좋은 것같아.. {•⸝⸝⸝⸝•} ꒱</button>
+                <button class="select2">좋은 것같아.. {•⸝⸝⸝⸝•}</button>
             </div>
             <div class="button"><button id="nextButton"><img src="images/nextButton.png" alt=" "></button></div>
         </div>
